...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="gXa-hf-Mfu">
                                <rect key="frame" x="114" y="74" width="147" height="29"/>
                                <segments>
                                    <segment title="Abertas"/>
                                    <segment title="Fechadas"/>
                                </segments>
                                <connections>
                                    <action selector="changeTab:" destination="xuB-zb-vIM" eventType="valueChanged" id="51n-U9-M1n"/>
                                </connections>
                            </segmentedControl>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rdt-7u-RhT">
...
